Add more tests and project infrastructure