@@ -1,3 +1,23 @@
+/*******************************************************************************
+ * Copyright (C) 2025 MassBank consortium
+ *
+ * This file is part of MassBank.
+ *
+ * MassBank is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 2
+ * of the License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+ *
+ ******************************************************************************/
 package massbank.export;
 
 import massbank.Record;
@@ -89,7 +109,7 @@ public class RecordToNIST_MSP {
 		}
 		
 		List<String> tmpList	= record.CH_NAME();
-		sb.append("Name: ").append(tmpList.get(0)).append(System.lineSeparator());
+		sb.append("Name: ").append(tmpList.getFirst()).append(System.lineSeparator());
 		for(int i = 1; i < tmpList.size(); i++)
 			sb.append("Synon: ").append(tmpList.get(i)).append(System.lineSeparator());
 		
